--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./styles/main.css">
   <title>Frontend Mentor | Stats preview card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,19 +14,33 @@
   </style>
 </head>
 <body>
-
-  Get insights that help your business grow.
-
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
-
-  10k+ companies
-  314 templates
-  12m+ queries
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <main class="stats-card">
+    <img class="stats-card__hero" src="" alt="">
+    <h1 class="stats-card__heading">Get insights that help your business grow.</h1>
+    <p class="stats-card__description">
+      Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+      experience, and overall efficiency.
+    </p>
+    <ul class="stats-card__list">
+      <li class="stats-card__stat">
+        <span class="stat-card__stat--number">10k+</span><br>
+        companies
+      </li>
+      <li class="stats-card__stat">
+        <span class="stat-card__stat--number">314</span><br>
+        templates
+      </li>
+      <li class="stats-card__stat">
+        <span class="stat-card__stat--number">12m+</span><br>
+        queries
+      </li>
+    </ul>
+  </main>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Kayla B.</a>.
+    </div>
+  </footer>
 </body>
 </html>
