Add mobile first styling structure to card. Add initial coloring and font styles.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 </head>
 <body>
   <main class="stats-card">
-    <img class="stats-card__hero" src="" alt="">
-    <h1 class="stats-card__heading">Get insights that help your business grow.</h1>
+    <div class="stats-card__hero">
+    </div>
+    <h1 class="stats-card__heading">Get <span class="stats-card__heading--highlight">insights</span> that help your business grow.</h1>
     <p class="stats-card__description">
       Discover the benefits of data analytics and make better decisions regarding revenue, customer 
       experience, and overall efficiency.
