Add styling to text fonts, line height and overall padding and margins.

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
     </p>
     <ul class="stats-card__list">
       <li class="stats-card__stat">
-        <span class="stat-card__stat--number">10k+</span><br>
+        <span class="stats-card__stat--number">10k+</span><br>
         companies
       </li>
       <li class="stats-card__stat">
-        <span class="stat-card__stat--number">314</span><br>
+        <span class="stats-card__stat--number">314</span><br>
         templates
       </li>
       <li class="stats-card__stat">
-        <span class="stat-card__stat--number">12m+</span><br>
+        <span class="stats-card__stat--number">12m+</span><br>
         queries
       </li>
     </ul>
