Add styling for tablet/desktop breakpoint

--- a/index.html
+++ b/index.html
@@ -6,36 +6,32 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="./styles/main.css">
   <title>Frontend Mentor | Stats preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
   <main class="stats-card">
     <div class="stats-card__hero">
     </div>
-    <h1 class="stats-card__heading">Get <span class="stats-card__heading--highlight">insights</span> that help your business grow.</h1>
-    <p class="stats-card__description">
-      Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-      experience, and overall efficiency.
-    </p>
-    <ul class="stats-card__list">
-      <li class="stats-card__stat">
-        <span class="stats-card__stat--number">10k+</span><br>
-        companies
-      </li>
-      <li class="stats-card__stat">
-        <span class="stats-card__stat--number">314</span><br>
-        templates
-      </li>
-      <li class="stats-card__stat">
-        <span class="stats-card__stat--number">12m+</span><br>
-        queries
-      </li>
-    </ul>
+    <div class="stats-card__content-wrapper">
+      <h1 class="stats-card__heading">Get <span class="stats-card__heading--highlight">insights</span> that help your business grow.</h1>
+      <p class="stats-card__description">
+        Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+        experience, and overall efficiency.
+      </p>
+      <ul class="stats-card__list">
+        <li class="stats-card__stat">
+          <span class="stats-card__stat--number">10k+</span><br>
+          companies
+        </li>
+        <li class="stats-card__stat">
+          <span class="stats-card__stat--number">314</span><br>
+          templates
+        </li>
+        <li class="stats-card__stat">
+          <span class="stats-card__stat--number">12m+</span><br>
+          queries
+        </li>
+      </ul>
+    </div>
   </main>
   <footer>
     <div class="attribution">
